--- a/netlify.toml
+++ b/netlify.toml
@@ -6,15 +6,16 @@ base = "app.js"  # Diretório raiz do seu projeto
 # Defina as variáveis de ambiente aqui (não inclua senhas ou chaves secretas diretamente no arquivo)
 # O Netlify permite configurar variáveis de ambiente em seu painel de controle.
 NODE_VERSION = "14" # Versão do Node.js
-STREAMTAPE_USER = "e9399cca09629f1f4f3d"
-STREAMTAPE_KEY = "XPgDDg9l99fD4Xd"
-
+EMAIL=geral@evenpure.pt
+EMAIL_KEY=geralevenpure
+HOST=mail.evenpure.pt
+PORT=587
 [dev]
 command = "node app.js" # Comando para iniciar o servidor localmente durante o desenvolvimento
 
 [[redirects]]
-from = "/video/*"
-to = "/video/:splat"
+from = "/*"
+to = "/send"
 status = 200
 
 [[redirects]]
